--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,12 @@
   filter: drop-shadow(0 0 2em #61dafbaa);
 }*/
 
+.typeFood {
+  padding: 0.5em;
+}
+
+
+
 @keyframes logo-spin {
   from {
     transform: rotate(0deg);
